hard-gists/2172888/run.log
=== Docker Run Log for 2172888 ===
Started at: Mi 29. Okt 13:00:16 CET 2025

[2025-10-29 13:00:16] START: Running container for 2172888
[2025-10-29 13:00:16] SUCCESS: Container a7c52301d08f10d4839e198f2c57f59a6de388a933bc1752477843367e0703fa started for 2172888
=== Container logs for 2172888 ===
  File "/snippet.py", line 18
    print "Failed downloading image from ", self.image_url
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2172888 ===
[2025-10-29 13:00:18] INFO: Container a7c52301d08f10d4839e198f2c57f59a6de388a933bc1752477843367e0703fa has stopped
